--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  margin: 0;
 }
 
 body {
@@ -23,21 +24,36 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  padding-left: 0;
 }
 
 a {
-  text-decoration: none;
   display: block;
+  text-decoration: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 .container {
   max-width: 1158px;
-  padding: 0 15px;
+  padding-left: 15px;
+  padding-right: 15px;
   margin: 0 auto;
 }
 
 .page-header {
+}
+
+.page-header .container {
+  display: flex;
+  justify-content: space-between;
 }
 
 .header-nav {
@@ -46,14 +62,12 @@ a {
 
 .logo {
   font-family: "Raleway", sans-serif;
-  font-weight: 700;
   font-size: 18px;
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
   width: 115px;
-  padding: 24px 0;
 }
 
 .header-logo .logo-part {
@@ -62,6 +76,14 @@ a {
 
 .footer-logo .logo-part {
   color: #f4f4fd;
+}
+
+.header-logo {
+  padding: 24px 0;
+}
+
+.footer-logo {
+  margin-bottom: 24px;
 }
 
 .nav-list {
@@ -108,24 +130,17 @@ a {
   color: #404bbf;
 }
 
-.page-header .container {
-  display: flex;
-  justify-content: space-between;
-}
-
 .page-footer {
   background-color: #2e2f42;
-  height: 312px;
-}
-
-.footer-container {
-  width: 20%; /* Логотип + текст = 20% ширини */
-  text-align: left;
   padding-top: 100px;
   padding-bottom: 100px;
 }
 
+.footer-container {
+}
+
 .footer-text {
+  max-width: 264px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
@@ -134,22 +149,21 @@ a {
 .hero {
   background-color: #2e2f42;
   text-align: center;
-  height: 600px;
-  margin-bottom: 120px;
+  padding-top: 188px;
+  padding-bottom: 188px;
 }
 
 .hero .container {
-  width: 700px;
-  padding-top: 188px;
-  margin: 0 auto;
 }
 
 .hero-title {
-  font-weight: 700;
+  max-width: 496px;
+  margin: 0 auto;
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
   text-align: center;
+  text-transform: capitalize;
   color: #fff;
   margin-bottom: 48px;
 }
@@ -165,7 +179,7 @@ a {
   color: #fff;
   border: none;
   background-color: #4d5ae5;
-  cursor: pointer;
+
   width: 169px;
   height: 56px;
 }
@@ -176,15 +190,11 @@ a {
 }
 
 .feature {
-  margin-bottom: 120px;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
-.feature-list {
-  display: flex;
-  gap: 24px;
-}
-
-.feature-item {
+.feature .container {
 }
 
 .visually-hidden {
@@ -200,12 +210,22 @@ a {
   overflow: hidden;
 }
 
+.feature-list {
+  display: flex;
+  gap: 24px;
+}
+
+.feature-item {
+  flex-basis: calc((100% - 72px) / 4);
+}
+
 .feature-subtitle {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .feature-text {
@@ -216,32 +236,37 @@ a {
 
 .team {
   background-color: #f4f4fd;
-  margin-bottom: 120px;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .team-title {
-  font-weight: 700;
+  max-width: 496px;
+  margin: 0 auto;
   font-size: 36px;
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
   text-transform: capitalize;
   color: #2e2f42;
-  padding-bottom: 72px;
+  margin-bottom: 72px;
 }
 
 .team-list {
+  display: flex;
+  gap: 24px;
 }
 
 .team .container {
-  padding-top: 120px;
-  padding-bottom: 120px;
+}
+
+.team-description {
+  padding: 32px 16px;
 }
 
 .team-item {
-  /*box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);*/
   background: #fff;
+  flex-basis: calc((100% - 72px) / 4);
 }
 
 .team-subtitle {
@@ -250,7 +275,9 @@ a {
   line-height: 1.2;
   letter-spacing: 0.02em;
   text-align: center;
+  text-transform: capitalize;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .team-text {
@@ -261,30 +288,41 @@ a {
 }
 
 .portfolio {
-  margin-bottom: 120px;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .portfolio .container {
 }
 
 .portfolio-title {
-  font-weight: 700;
+  max-width: 496px;
+  margin: 0 auto;
   font-size: 36px;
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
   text-transform: capitalize;
   color: #2e2f42;
-  padding-bottom: 72px;
+  margin-bottom: 72px;
 }
 
 .portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 48px 24px;
 }
 
 .portfolio-item {
-  /*box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);*/
   background: #fff;
+  width: calc((100% - 48px) / 3);
+}
+
+.portfolio-description {
+  border-bottom: 1px solid #e7e9fc;
+  border-left: 1px solid #e7e9fc;
+  border-right: 1px solid #e7e9fc;
+  padding: 32px 16px;
 }
 
 .portfolio-subtitle {
@@ -292,7 +330,9 @@ a {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  text-transform: capitalize;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .portfolio-category {
