--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,7 @@ img {
 
 .page-header .container {
   display: flex;
+  align-items: center;
   justify-content: space-between;
 }
 
@@ -81,16 +82,18 @@ img {
 
 .header-logo {
   padding: 24px 0;
+  margin-right: 76px;
 }
 
 .footer-logo {
-  margin-bottom: 24px;
+  display: inline-block;
+  margin-bottom: 16px;
 }
 
 .nav-list {
   display: flex;
+  align-items: center;
   gap: 40px;
-  margin-left: 76px;
 }
 
 .nav-item {
@@ -179,9 +182,9 @@ img {
   letter-spacing: 0.04em;
   color: #fff;
   border: none;
+  border-radius: 4px;
   background-color: #4d5ae5;
-
-  width: 169px;
+  min-width: 169px;
   height: 56px;
 }
 
@@ -200,9 +203,9 @@ img {
 
 .visually-hidden {
   position: absolute;
-  width: 1;
-  height: 1;
-  margin: -1;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
   border: 0;
   padding: 0;
   white-space: nowrap;
@@ -262,11 +265,15 @@ img {
 }
 
 .team-description {
-  padding: 32px 16px;
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-top: 32px;
 }
 
 .team-item {
   background: #fff;
+  border-radius: 0 0 4px 4px;
+  padding: 0px 0px 32px 0px;
   flex-basis: calc((100% - 72px) / 4);
 }
 
