--- a/css/styles.css
+++ b/css/styles.css
@@ -54,12 +54,12 @@ img {
 
 .page-header .container {
   display: flex;
-  align-items: center;
   justify-content: space-between;
 }
 
 .header-nav {
   display: flex;
+  align-items: center;
 }
 
 .logo {
@@ -267,13 +267,13 @@ img {
 .team-description {
   padding-left: 16px;
   padding-right: 16px;
-  padding-top: 32px;
+  padding: 32px 0;
 }
 
 .team-item {
   background: #fff;
   border-radius: 0 0 4px 4px;
-  padding: 0px 0px 32px 0px;
+
   flex-basis: calc((100% - 72px) / 4);
 }
 
